--- a/app/src/main/res/layout/fragment_netty.xml
+++ b/app/src/main/res/layout/fragment_netty.xml
@@ -23,13 +23,14 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:weightSum="3">
+                android:weightSum="3"
+                android:layout_marginBottom="10dp">
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Button"
-                    android:id="@+id/button2"
+                    android:text="Echo"
+                    android:id="@+id/btEcho"
                     android:layout_weight="1" />
 
                 <Button
