--- a/app/src/main/res/layout/fragment_netty.xml
+++ b/app/src/main/res/layout/fragment_netty.xml
@@ -29,15 +29,15 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Echo"
-                    android:id="@+id/btEcho"
+                    android:text="setup"
+                    android:id="@+id/btSetup"
                     android:layout_weight="1" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Button"
-                    android:id="@+id/button3"
+                    android:text="Echo"
+                    android:id="@+id/btEcho"
                     android:layout_weight="1" />
 
                 <Button
